@startuml
abstract class Shape {
+ Color color
~ {abstract}void draw(GraphicsContext)
}


class Line {
+ double x
+ double y
+ void draw(GraphicsContext)
}


class Rectangle {
+ double length
+ double width
+ double area()
+ void draw(GraphicsContext)
}


class Triangle {
+ void draw(GraphicsContext)
}



Shape <|-- Line
Shape <|-- Rectangle
Shape <|-- Triangle
@enduml